feat: add education detail and university